minor text-wrap style fix

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/lynx/insights/lynx-insight-overlay/lynx-insight-overlay.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/lynx/insights/lynx-insight-overlay/lynx-insight-overlay.component.scss
@@ -153,6 +153,7 @@ h1 {
     color: $secondaryTextColor;
     font-family: monospace;
     font-size: 0.9em;
+    text-wrap: nowrap;
   }
 }
 
